# py-alloy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
py-test/: bench.py  decode.py  erc20.py
src/: erc20.rs  lib.rs
